--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,10 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/csssolarsystem.js"></script>
         <script src='scripts/controllers/threejsDemo.js'></script>
+        <script src='scripts/controllers/canvasChess.js'></script>
+
+        <script src='scripts/services/canvasChess/board.js'></script>
+        <script src='scripts/services/canvasChess/piece.js'></script>
         <!-- endbuild -->
 </body>
 </html>
