Added some tests

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,8 @@
 
         <script src='scripts/services/canvasChess/board.js'></script>
         <script src='scripts/services/canvasChess/piece.js'></script>
+        <script src='scripts/services/canvasChess/player.js'></script>
+        <script src='scripts/services/canvasChess/game.js'></script>
         <!-- endbuild -->
 </body>
 </html>
