--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/csssolarsystem.js"></script>
         <script src='scripts/controllers/threejsDemo.js'></script>
         <script src='scripts/controllers/canvasChess.js'></script>
+        <script src='scripts/controllers/threejsBubbles.js'></script>
 
         <script src='scripts/services/canvasChess/board.js'></script>
         <script src='scripts/services/canvasChess/piece.js'></script>
