Added python server

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
         <script src='scripts/controllers/threejsDemo.js'></script>
         <script src='scripts/controllers/canvasChess.js'></script>
         <script src='scripts/controllers/threejsBubbles.js'></script>
+        <script src='scripts/controllers/threejsSolarSystem.js'></script>
 
         <script src='scripts/services/canvasChess/board.js'></script>
         <script src='scripts/services/canvasChess/piece.js'></script>
