Added bubble popper page

--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,8 @@
         <script src='scripts/services/canvasChess/piece.js'></script>
         <script src='scripts/services/canvasChess/player.js'></script>
         <script src='scripts/services/canvasChess/game.js'></script>
+
+        <script src='scripts/services/bubbleService.js'></script>
         <!-- endbuild -->
 </body>
 </html>
