--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel='stylesheet' href='styles/csssolarsystem.css' />
+    <link rel='stylesheet' href='styles/uranus.css' />
     <!-- endbuild -->
   </head>
   <body ng-app="portfolioApp" >
@@ -23,7 +24,7 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-controller='rootCtrl'>
       <nav class="header">
-        <h2 class='appTitle'>Andy 2.0</h2>
+        <h2 class='appTitle'>Andy Sandbox 2.0</h2>
         <ul class="nav">
           <li ng-class="{active: activeTab == ''}" ><a ng-href="#">Home</a></li>
           <li ng-class="{active: activeTab == 'css-solar-system'}"><a ng-href="#/css-solar-system">CSS Solar System</a></li>
