--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         <script src='scripts/services/canvasChess/game.js'></script>
 
         <script src='scripts/services/bubbleService.js'></script>
+        <script src='scripts/services/sixDegreesOfWesterosService.js'></script>
         <!-- endbuild -->
 </body>
 </html>
