--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel='stylesheet' href='styles/csssolarsystem.css' />
     <link rel='stylesheet' href='styles/uranus.css' />
     <link rel='stylesheet' href='styles/relationshipMapGOT.css' />
+    <link rel='stylesheet' href='styles/relationshipEditorGOT.css' />
     <!-- endbuild -->
   </head>
   <body ng-app="portfolioApp" >
@@ -85,6 +86,7 @@
         <script src='scripts/controllers/threejsBubbles.js'></script>
         <script src='scripts/controllers/threejsSolarSystem.js'></script>
         <script src='scripts/controllers/relationshipMapGOT.js'></script>
+        <script src='scripts/controllers/relationshipEditorGOT.js'></script>
 
         <script src='scripts/services/canvasChess/board.js'></script>
         <script src='scripts/services/canvasChess/piece.js'></script>
