--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-controller='rootCtrl'>
       <nav class="header">
-        <h2 class='appTitle'>Andy Sandbox 2.0</h2>
+        <h2 class='appTitle'>Andyland</h2>
         <ul class="nav">
           <li ng-class="{active: activeTab == ''}" ><a ng-href="#">Home</a></li>
           <li ng-class="{active: activeTab == 'css-solar-system'}"><a ng-href="#/css-solar-system">CSS Solar System</a></li>
@@ -35,7 +35,7 @@
         </ul>
       </nav>
 
-      <div ng-view=""></div>
+      <div class='content' ng-view=""></div>
 
       <footer class="footer">
       </footer>
