Adding rotating planets

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel='stylesheet' href='styles/uranus.css' />
     <link rel='stylesheet' href='styles/relationshipMapGOT.css' />
     <link rel='stylesheet' href='styles/relationshipEditorGOT.css' />
+    <link rel='stylesheet' href='styles/about.css' />
     <!-- endbuild -->
   </head>
   <body ng-app="portfolioApp" >
@@ -85,6 +86,7 @@
         <script src='scripts/controllers/canvasChess.js'></script>
         <script src='scripts/controllers/threejsBubbles.js'></script>
         <script src='scripts/controllers/threejsSolarSystem.js'></script>
+        <script src='scripts/controllers/threejsPlanet.js'></script>
         <script src='scripts/controllers/relationshipMapGOT.js'></script>
         <script src='scripts/controllers/relationshipEditorGOT.js'></script>
 
@@ -94,6 +96,7 @@
         <script src='scripts/services/canvasChess/game.js'></script>
 
         <script src='scripts/services/bubbleService.js'></script>
+        <script src='scripts/services/planetService.js'></script>
         <script src='scripts/services/sixDegreesOfWesterosService.js'></script>
         <!-- endbuild -->
 </body>
