--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         </ul>
       </nav>
 
-      <div class='content' ng-view=""></div>
+      <div class='content' id='view' ng-view=""></div>
 
       <footer class="footer">
       </footer>
