Updated overlay styles

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel='stylesheet' href='styles/relationshipMapGOT.css' />
     <link rel='stylesheet' href='styles/relationshipEditorGOT.css' />
     <link rel='stylesheet' href='styles/about.css' />
+    <link rel='stylesheet' href='styles/threejsPlanet.css' />
     <!-- endbuild -->
   </head>
   <body ng-app="portfolioApp" >
@@ -31,6 +32,7 @@
         <ul class="nav">
           <li ng-class="{active: activeTab == ''}" ><a ng-href="#">Home</a></li>
           <li ng-class="{active: activeTab == 'css-solar-system'}"><a ng-href="#/css-solar-system">CSS Solar System</a></li>
+          <li ng-class="{active: activeTab == 'three-js-planet'}"><a ng-href="#/three-js-planet">3D Planets</a></li>
           <li ng-class="{active: activeTab == 'bubble-popper'}"><a ng-href="#/bubble-popper">Bubble Popper</a></li>
           <li ng-class="{active: activeTab == 'about'}"><a ng-href="#/about">About</a></li>
         </ul>
