Added transparent image page.

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel='stylesheet' href='styles/relationshipEditorGOT.css' />
     <link rel='stylesheet' href='styles/about.css' />
     <link rel='stylesheet' href='styles/threejsPlanet.css' />
+    <link rel='stylesheet' href='styles/transparentImageDemo.css' />
     <!-- endbuild -->
   </head>
   <body ng-app="portfolioApp" >
@@ -91,6 +92,7 @@
         <script src='scripts/controllers/threejsPlanet.js'></script>
         <script src='scripts/controllers/relationshipMapGOT.js'></script>
         <script src='scripts/controllers/relationshipEditorGOT.js'></script>
+        <script src='scripts/controllers/transparentImageDemo.js'></script>
 
         <script src='scripts/services/canvasChess/board.js'></script>
         <script src='scripts/services/canvasChess/piece.js'></script>
