--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
     <link rel='stylesheet' href='styles/threejsPlanet.css' />
     <link rel='stylesheet' href='styles/transparentImageDemo.css' />
     <!-- endbuild -->
+
+    <link href='http://fonts.googleapis.com/css?family=Orbitron:400,500,900,700' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="portfolioApp" >
     <!--[if lt IE 7]>
@@ -81,6 +83,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/root.js"></script>
+
+        <script src='scripts/libraries/OrbitControls.js'></script>
+
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src='scripts/controllers/bubblePopper.js'></script>
