Change to HTML5 Mode

--- a/app/index.html
+++ b/app/index.html
@@ -20,10 +20,10 @@
         <h2 class='appTitle'>Andyland</h2>
         <ul class="nav">
           <li ng-class="{active: activeTab == ''}" ><a ng-href="#/">Home</a></li>
-          <li ng-class="{active: activeTab == 'css-solar-system'}"><a ng-href="#/css-solar-system">CSS Solar System</a></li>
-          <li ng-class="{active: activeTab == 'three-js-planet'}"><a ng-href="#/three-js-planet">3D Planets</a></li>
-          <li ng-class="{active: activeTab == 'bubble-popper'}"><a ng-href="#/bubble-popper">Bubble Popper</a></li>
-          <li ng-class="{active: activeTab == 'about'}"><a ng-href="#/about">About</a></li>
+          <li ng-class="{active: activeTab == 'css-solar-system'}"><a ng-href="css-solar-system">CSS Solar System</a></li>
+          <li ng-class="{active: activeTab == 'three-js-planet'}"><a ng-href="three-js-planet">3D Planets</a></li>
+          <li ng-class="{active: activeTab == 'bubble-popper'}"><a ng-href="bubble-popper">Bubble Popper</a></li>
+          <li ng-class="{active: activeTab == 'about'}"><a ng-href="about">About</a></li>
         </ul>
       </nav>
 
